#57 fix overflown dialog scrollbars

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -291,7 +291,8 @@ mdl-simple-tooltip div {
   left: 0;
   right: 0;
   bottom: 0;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .mdl-dialog {
